# rusty_art

./: Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: release.yml  rust.yml
examples/: rusty_art_tui.rs
shaders/: 2025tree.wgsl  3dneuron.wgsl  GPUattractor.wgsl  adelson.wgsl  asahi.wgsl  asahi2.wgsl  chladniwgpu.wgsl  darkclouds.wgsl  dottedlines.wgsl  expmandelbrotgpu.wgsl  faketunnel.wgsl  fbmflowgpu.wgsl  fluid.wgsl  gabor.wgsl  gaborimage.wgsl  gaborlbrot.wgsl  galaxy.wgsl  galaxy2.wgsl  gaussiansplat.wgsl  golf.wgsl  imlenswgpu.wgsl  kleinian.wgsl  lovewgpu.wgsl  mandelbrotgpu.wgsl  mandelbulb.wgsl  microscope.wgsl  nebula.wgsl  neuralnetwgpu.wgsl  neurons.wgsl  neurons2.wgsl  orbittraps.wgsl  ornaments.wgsl  peaceGPU.wgsl  pixelflow.wgsl  pixelsum.wgsl  psychology.wgsl  pupils.wgsl  rorschach.wgsl  sdrect.wgsl  sdvert.wgsl  (+14 more)
src/: 2025tree.rs  3dneuron.rs  GPUattractor.rs  adelson.rs  asahi.rs  asahi2.rs  attractors.rs  bhole.rs  blobs.rs  butter.rs  butter2d.rs  cafe_wall.rs  candy.rs  chladni.rs  chladniwgpu.rs  cliff.rs  darkclouds.rs  dfft.rs  dottedlines.rs  enigma.rs  expmandelbrotgpu.rs  eyes.rs  faketunnel.rs  fan.rs  fbmflowgpu.rs  fibonacci .rs  fibonacci.rs  fluid.rs  footsteps.rs  fourier.rs  gabor.rs  gaborill.rs  gaborimage.rs  gaborlbrot.rs  gaborwgpu.rs  galaxy.rs  galaxy2.rs  gaussiansplat.rs  glow.rs  golf.rs  (+78 more)
src/images/: bhole.rs
