[package]
name = "rusty_art"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18.1"
nannou_osc = "0.18.0"
rand = "0.8.5"
nannou_egui = "0.5.0"
fft2d = { version = "0.1.1", features = ["nalgebra"] }
rustfft = "6.1.0"
nalgebra = "0.29"
voronator = "0.2.1"

[[bin]]
name = "enigma"
path = "src/enigma.rs"

[[bin]]
name ="rainbow"
path = "src/rainbow.rs"

[[bin]]
name ="footsteps"
path = "src/footsteps.rs"

[[bin]]
name ="pixely"
path = "src/pixely.rs"

[[bin]]
name= "blobs"
path = "src/blobs.rs"

[[bin]]
name= "fibonacci"
path = "src/fibonacci.rs"

[[bin]]
name= "cliff"
path = "src/cliff.rs"

[[bin]]
name= "triangles"
path = "src/triangles.rs"

[[bin]]
name="shapes"
path = "src/shapes.rs"

[[bin]]
name="peace"
path = "src/peace.rs"

[[bin]]
name="plumes"
path = "src/plumes.rs"

[[bin]]
name="attractors"
path = "src/attractors.rs"

[[bin]]
name="waves"
path = "src/waves.rs"

[[bin]]
name="waves2"
path = "src/waves2.rs"

[[bin]]
name="sine"
path = "src/sine.rs"

[[bin]]
name="mona"
path = "src/mona.rs"

[[bin]]
name="cafe_wall"
path = "src/cafe_wall.rs"

[[bin]]
name="munker"
path = "src/munker.rs"

[[bin]]
name="glow"
path = "src/glow.rs"

[[bin]]
name="pdiamond"
path = "src/pdiamond.rs"

[[bin]]
name="lilac"
path = "src/lilac.rs"

[[bin]]
name="fourier"
path = "src/fourier.rs"

[[bin]]
name="peace2"
path = "src/peace2.rs"

[[bin]]
name="nblur"
path = "src/nblur.rs"

[[bin]]
name="vortexmona"
path = "src/vortexmona.rs"

[[bin]]
name="pixelrain"
path = "src/pixelrain.rs"

[[bin]]
name="tiles"
path = "src/tiles.rs"

[[bin]]
name="pina"
path = "src/pina.rs"

[[bin]]
name="hole"
path = "src/hole.rs"

[[bin]]
name="pare"
path = "src/pare.rs"

[[bin]]
name="neuralnet"
path = "src/neuralnet.rs"

[[bin]]
name="peace3"
path = "src/peace3.rs"

[[bin]]
name="bhole"
path = "src/bhole.rs"

[[bin]]
name="oscillation"
path = "src/oscillation.rs"

[[bin]]
name="gabor"
path = "src/gabor.rs"

[[bin]]
name="chladni"
path = "src/chladni.rs"

[[bin]]
name="hilbert"
path = "src/hilbert.rs"

[[bin]]
name="hilbertimg"
path = "src/hilbertimg.rs"

[[bin]]
name="snowflake"
path = "src/snowflake.rs"

[[bin]]
name="mandelbrot"
path = "src/mandelbrot.rs"

[[bin]]
name="leviant"
path = "src/leviant.rs"

[[bin]]
name="swirl"
path = "src/swirl.rs"

[[bin]]
name="spiralimg"
path = "src/spiralimg.rs"

[[bin]]
name="eyes"
path = "src/eyes.rs"

[[bin]]
name="imgblob"
path = "src/imgblob.rs"

[[bin]]
name="scramble"
path = "src/scramble.rs"

[[bin]]
name="pixelate"
path = "src/pixelate.rs"

[[bin]]
name="rainbowimage"
path = "src/rainbowimage.rs"

[[bin]]
name = "imfft"
path = "src/imfft.rs"

[[bin]]
name = "gaborill"
path = "src/gaborill.rs"

[[bin]]
name = "imgabor"
path = "src/imgabor.rs"

[[bin]]
name = "munkerclock"
path = "src/munkerclock.rs"

[[bin]]
name = "voronoi"
path = "src/voronoi.rs"

[[bin]]
name = "lorenz"
path = "src/lorenz.rs"

[[bin]]
name = "kaniza"
path = "src/kaniza.rs"

[[bin]]
name = "ulam"
path = "src/ulam.rs"

[[bin]]
name = "dfft"
path = "src/dfft.rs"