[package]
name = "rusty_art"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.19.0"
nannou_osc = "0.19.0"
rand = "0.8.5"
nannou_egui = "0.19.0"
fft2d = { version = "0.1.1", features = ["nalgebra"] }
rustfft = "6.1.0"
nalgebra = "0.29"
voronator = "0.2.1"
image = "0.24.8"
butter2d = "0.1.1"
[[bin]]
name = "enigma"
path = "src/enigma.rs"

[[bin]]
name ="rainbow"
path = "src/rainbow.rs"

[[bin]]
name ="footsteps"
path = "src/footsteps.rs"

[[bin]]
name ="pixely"
path = "src/pixely.rs"

[[bin]]
name= "blobs"
path = "src/blobs.rs"

[[bin]]
name= "fibonacci"
path = "src/fibonacci.rs"

[[bin]]
name= "cliff"
path = "src/cliff.rs"

[[bin]]
name= "triangles"
path = "src/triangles.rs"

[[bin]]
name="shapes"
path = "src/shapes.rs"

[[bin]]
name="peace"
path = "src/peace.rs"

[[bin]]
name="plumes"
path = "src/plumes.rs"

[[bin]]
name="attractors"
path = "src/attractors.rs"

[[bin]]
name="waves"
path = "src/waves.rs"

[[bin]]
name="waves2"
path = "src/waves2.rs"

[[bin]]
name="sine"
path = "src/sine.rs"

[[bin]]
name="mona"
path = "src/mona.rs"

[[bin]]
name="cafe_wall"
path = "src/cafe_wall.rs"

[[bin]]
name="munker"
path = "src/munker.rs"

[[bin]]
name="glow"
path = "src/glow.rs"

[[bin]]
name="pdiamond"
path = "src/pdiamond.rs"

[[bin]]
name="lilac"
path = "src/lilac.rs"

[[bin]]
name="fourier"
path = "src/fourier.rs"

[[bin]]
name="peace2"
path = "src/peace2.rs"

[[bin]]
name="nblur"
path = "src/nblur.rs"

[[bin]]
name="vortexmona"
path = "src/vortexmona.rs"

[[bin]]
name="pixelrain"
path = "src/pixelrain.rs"

[[bin]]
name="tiles"
path = "src/tiles.rs"

[[bin]]
name="pina"
path = "src/pina.rs"

[[bin]]
name="hole"
path = "src/hole.rs"

[[bin]]
name="pare"
path = "src/pare.rs"

[[bin]]
name="neuralnet"
path = "src/neuralnet.rs"

[[bin]]
name="peace3"
path = "src/peace3.rs"

[[bin]]
name="bhole"
path = "src/bhole.rs"

[[bin]]
name="oscillation"
path = "src/oscillation.rs"

[[bin]]
name="gabor"
path = "src/gabor.rs"

[[bin]]
name="chladni"
path = "src/chladni.rs"

[[bin]]
name="hilbert"
path = "src/hilbert.rs"

[[bin]]
name="hilbertimg"
path = "src/hilbertimg.rs"

[[bin]]
name="snowflake"
path = "src/snowflake.rs"

[[bin]]
name="mandelbrot"
path = "src/mandelbrot.rs"

[[bin]]
name="leviant"
path = "src/leviant.rs"

[[bin]]
name="swirl"
path = "src/swirl.rs"

[[bin]]
name="spiralimg"
path = "src/spiralimg.rs"

[[bin]]
name="eyes"
path = "src/eyes.rs"

[[bin]]
name="imgblob"
path = "src/imgblob.rs"

[[bin]]
name="scramble"
path = "src/scramble.rs"

[[bin]]
name="pixelate"
path = "src/pixelate.rs"

[[bin]]
name="rainbowimage"
path = "src/rainbowimage.rs"

[[bin]]
name = "imfft"
path = "src/imfft.rs"

[[bin]]
name = "gaborill"
path = "src/gaborill.rs"

[[bin]]
name = "imgabor"
path = "src/imgabor.rs"

[[bin]]
name = "munkerclock"
path = "src/munkerclock.rs"

[[bin]]
name = "voronoi"
path = "src/voronoi.rs"

[[bin]]
name = "lorenz"
path = "src/lorenz.rs"

[[bin]]
name = "kaniza"
path = "src/kaniza.rs"

[[bin]]
name = "ulam"
path = "src/ulam.rs"

[[bin]]
name = "dfft"
path = "src/dfft.rs"

[[bin]]
name = "butter2d"
path = "src/butter2d.rs"


[[bin]]
name = "gaborwgpu"
path = "src/gaborwgpu.rs"

[[bin]]
name = "galaxy"
path = "src/galaxy.rs"

[[bin]]
name = "mandelbrotgpu"
path = "src/mandelbrotgpu.rs"

[[bin]]
name = "chladniwgpu"
path = "src/chladniwgpu.rs"

[[bin]]
name = "snowflakewgpu"
path = "src/snowflakewgpu.rs"

[[bin]]
name = "spiralimgwgpu"
path = "src/spiralimgwgpu.rs"

[[bin]]
name = "neuralnetwgpu"
path = "src/neuralnetwgpu.rs"

[[bin]]
name = "imlenswgpu"
path = "src/imlenswgpu.rs"

[[bin]]
name = "fbmflowgpu"
path = "src/fbmflowgpu.rs"

[[bin]]
name = "lovewgpu"
path = "src/lovewgpu.rs"

[[bin]]
name = "microscope"
path = "src/microscope.rs"

[[bin]]
name = "neurons"
path = "src/neurons.rs"

[[bin]]
name = "asahi"
path = "src/asahi.rs"

[[bin]]
name = "voronoiwgpu"
path = "src/voronoiwgpu.rs"

[[bin]]
name = "voronoiwgpu2"
path = "src/voronoiwgpu2.rs"

[[bin]]
name = "fluid"
path = "src/fluid.rs"

[[bin]]
name = "asahi2"
path = "src/asahi2.rs"

[[bin]]
name = "sinh"
path = "src/sinh.rs"

[[bin]]
name = "tree"
path = "src/tree.rs"

[[bin]]
name = "expmandelbrotgpu"
path = "src/expmandelbrotgpu.rs"

[[bin]]
name = "pupils"
path = "src/pupils.rs"

[[bin]]
name = "pixelflow"
path = "src/pixelflow.rs"

[[bin]]
name = "gaborlbrot"
path = "src/gaborlbrot.rs"

