[package]
name = "rusty_art"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.19.0"
nannou_osc = "0.19.0"
rand = "0.8.5"
nannou_egui = "0.19.0"
nalgebra = "0.32.5"
voronator = "0.2.1"
image = "0.25.1"
butter2d = "0.1.2"
bytemuck = "1.15.0"
rfd = "0.14.1"

[[bin]]
name ="footsteps"
path = "src/footsteps.rs"

[[bin]]
name= "blobs"
path = "src/blobs.rs"

[[bin]]
name= "fibonacci"
path = "src/fibonacci.rs"

[[bin]]
name= "triangles"
path = "src/triangles.rs"

[[bin]]
name="peace"
path = "src/peace.rs"

[[bin]]
name="attractors"
path = "src/attractors.rs"

[[bin]]
name="waves"
path = "src/waves.rs"

[[bin]]
name="waves2"
path = "src/waves2.rs"

[[bin]]
name="cafe_wall"
path = "src/cafe_wall.rs"

[[bin]]
name="munker"
path = "src/munker.rs"

[[bin]]
name="pdiamond"
path = "src/pdiamond.rs"

[[bin]]
name="lilac"
path = "src/lilac.rs"

[[bin]]
name="fourier"
path = "src/fourier.rs"

[[bin]]
name="nblur"
path = "src/nblur.rs"

[[bin]]
name="pixelrain"
path = "src/pixelrain.rs"

[[bin]]
name="pina"
path = "src/pina.rs"

[[bin]]
name="hole"
path = "src/hole.rs"

[[bin]]
name="neuralnet"
path = "src/neuralnet.rs"

[[bin]]
name="bhole"
path = "src/bhole.rs"

[[bin]]
name="oscillation"
path = "src/oscillation.rs"

[[bin]]
name="chladni"
path = "src/chladni.rs"

[[bin]]
name="hilbert"
path = "src/hilbert.rs"

[[bin]]
name="hilbertimg"
path = "src/hilbertimg.rs"

[[bin]]
name="snowflake"
path = "src/snowflake.rs"

[[bin]]
name="mandelbrot"
path = "src/mandelbrot.rs"

[[bin]]
name="leviant"
path = "src/leviant.rs"

[[bin]]
name="eyes"
path = "src/eyes.rs"

[[bin]]
name="imgblob"
path = "src/imgblob.rs"

[[bin]]
name="scramble"
path = "src/scramble.rs"

[[bin]]
name="pixelate"
path = "src/pixelate.rs"

[[bin]]
name="rainbowimage"
path = "src/rainbowimage.rs"

[[bin]]
name = "gaborill"
path = "src/gaborill.rs"

[[bin]]
name = "munkerclock"
path = "src/munkerclock.rs"

[[bin]]
name = "voronoi"
path = "src/voronoi.rs"

[[bin]]
name = "lorenz"
path = "src/lorenz.rs"

[[bin]]
name = "ulam"
path = "src/ulam.rs"

[[bin]]
name = "dfft"
path = "src/dfft.rs"

[[bin]]
name = "butter2d"
path = "src/butter2d.rs"


[[bin]]
name = "gaborwgpu"
path = "src/gaborwgpu.rs"

[[bin]]
name = "galaxy"
path = "src/galaxy.rs"

[[bin]]
name = "chladniwgpu"
path = "src/chladniwgpu.rs"

[[bin]]
name = "snowflakewgpu"
path = "src/snowflakewgpu.rs"

[[bin]]
name = "spiralimgwgpu"
path = "src/spiralimgwgpu.rs"

[[bin]]
name = "neuralnetwgpu"
path = "src/neuralnetwgpu.rs"

[[bin]]
name = "imlenswgpu"
path = "src/imlenswgpu.rs"

[[bin]]
name = "fbmflowgpu"
path = "src/fbmflowgpu.rs"

[[bin]]
name = "lovewgpu"
path = "src/lovewgpu.rs"


[[bin]]
name = "neurons"
path = "src/neurons.rs"

[[bin]]
name = "asahi"
path = "src/asahi.rs"

[[bin]]
name = "voronoiwgpu"
path = "src/voronoiwgpu.rs"

[[bin]]
name = "fluid"
path = "src/fluid.rs"

[[bin]]
name = "asahi2"
path = "src/asahi2.rs"

[[bin]]
name = "sinh"
path = "src/sinh.rs"

[[bin]]
name = "tree"
path = "src/tree.rs"

[[bin]]
name = "expmandelbrotgpu"
path = "src/expmandelbrotgpu.rs"

[[bin]]
name = "pupils"
path = "src/pupils.rs"

[[bin]]
name = "pixelflow"
path = "src/pixelflow.rs"

[[bin]]
name = "darkclouds"
path = "src/darkclouds.rs"

[[bin]]
name = "tunnel"
path = "src/tunnel.rs"

[[bin]]
name = "neurons2"
path = "src/neurons2.rs"

[[bin]]
name = "nebula"
path = "src/nebula.rs"

[[bin]]
name = "pixelsum"
path = "src/pixelsum.rs"

[[bin]]
name = "smoothneurons"
path = "src/smoothneurons.rs"

[[bin]]
name = "gaussiansplat"
path = "src/gaussiansplat.rs"

[[bin]]
name = "gaborimage"
path = "src/gaborimage.rs"

[[bin]]
name = "rorschach"
path = "src/rorschach.rs"

[[bin]]
name = "stripes"
path = "src/stripes.rs"

[[bin]]
name = "psychology"
path = "src/psychology.rs"

[[bin]]
name = "3dneuron"
path = "src/3dneuron.rs"

[[bin]]
name = "mandelbulb"
path = "src/mandelbulb.rs"

[[bin]]
name = "dottedlines"
path = "src/dottedlines.rs"

[[bin]]
name = "ornaments"
path = "src/ornaments.rs"

[[bin]]
name= "faketunnel"
path = "src/faketunnel.rs"
[[bin]]
name= "smoothvoro"
path = "src/smoothvoro.rs"

[[bin]]
name= "wrapper"
path = "src/wrapper.rs"

[[bin]]
name= "galaxy2"
path = "src/galaxy2.rs"

[[bin]]
name= "GPUattractor"
path = "src/GPUattractor.rs"

[[bin]]
name= "peaceGPU"
path = "src/peaceGPU.rs"

[[bin]]
name= "kleinian"
path = "src/kleinian.rs"

[[bin]]
name= "adelson"
path = "src/adelson.rs"

[[bin]]
name= "orbittraps"
path = "src/orbittraps.rs"

[[bin]]
name= "golf"
path = "src/golf.rs"

[[bin]]
name = "sdrect"
path = "src/sdrect.rs"

[[bin]]
name = "2025tree"
path = "src/2025tree.rs"

[[bin]]
name = "winterflake"
path = "src/winterflake.rs"

[[bin]]
name = "sdvert"
path = "src/sdvert.rs"

[dev-dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
